--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -49,7 +49,50 @@
                         <p>Notifications</p>
                     </a>
                 </li>
-              
+                <li class="nav-item ">
+                    <div id="accordion">
+         
+           <div class="card">
+             <div class="card-header">
+               <a class="card-link text-dark" data-toggle="collapse" href="#collapseOne">
+                 Collapsible Group Item #1
+               </a>
+             </div>
+             <div id="collapseOne" class="collapse" data-parent="#accordion">
+               <div class="card-body text-dark">
+                 Lorem ipsum..
+               </div>
+             </div>
+           </div>
+         
+           <div class="card">
+             <div class="card-header">
+               <a class="collapsed card-link" data-toggle="collapse" href="#collapseTwo">
+                 Collapsible Group Item #2
+               </a>
+             </div>
+             <div id="collapseTwo" class="collapse" data-parent="#accordion">
+               <div class="card-body">
+                 Lorem ipsum..
+               </div>
+             </div>
+           </div>
+         
+           <div class="card">
+             <div class="card-header">
+               <a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
+                 Collapsible Group Item #3
+               </a>
+             </div>
+             <div id="collapseThree" class="collapse" data-parent="#accordion">
+               <div class="card-body">
+                 Lorem ipsum..
+               </div>
+             </div>
+           </div>
+         
+         </div>
+                   </li>
             </ul>
         </div>
     </div>
