--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -19,7 +19,7 @@
          </div>
        </div>
       </div>
-      <nav class="navbar navbar-default navbar-menu">
+      <nav class="navbar navbar-expand-lg navbar-default navbar-menu">
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> 
@@ -35,26 +35,26 @@
           </div>
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" data-hover="dropdown" data-animations="fadeIn">
             <ul class="nav navbar-nav navbar-right">
-              <li class="active"><a [routerLink]="['/home']">Home</a></li>
-              <li><a [routerLink]="['/aboutus']" class="format">About us </a></li>
-              <li><a  [routerLink]="['/service']">Services </a></li>
-              <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Blog <span class="caret"></span></a>
+              <li class="nav-item active"><a class="nav-link" [routerLink]="['/home']">Home</a></li>
+              <li class="nav-item"><a class="nav-link" [routerLink]="['/aboutus']" class="format">About us </a></li>
+              <li class="nav-item"><a  class="nav-link" [routerLink]="['/service']">Services </a></li>
+              <li class="nav-item"> <a href="#"  data-toggle="dropdown" role="button" aria-expanded="false">Blog <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><a  [routerLink]="['/bloglist']">Blog Listing</a></li>
-                  <li><a [routerLink]="['/blogdetail']">Blog Details</a></li>
+                  <li><a class="dropdown-item" [routerLink]="['/bloglist']">Blog Listing</a></li>
+                  <li><a class="dropdown-item" [routerLink]="['/blogdetail']">Blog Details</a></li>
                 </ul>
               </li>
-              <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">App <span class="caret"></span></a>
+              <li class="nav-item"> <a href="#"  data-toggle="dropdown" role="button" aria-expanded="false">App <span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
-                  <li><a [routerLink]="['/scientific']">Scientific Application</a></li>
-                  <li><a [routerLink]="['/medical']">Medical Application</a></li>
-                  <li><a [routerLink]="['/education']">Education Application</a></li>
-                  <li><a [routerLink]="['/business']">Business Application</a></li>
+                  <li><a class="dropdown-item" [routerLink]="['/scientific']">Scientific Application</a></li>
+                  <li><a class="dropdown-item" [routerLink]="['/medical']">Medical Application</a></li>
+                  <li><a class="dropdown-item" [routerLink]="['/education']">Education Application</a></li>
+                  <li><a class="dropdown-item" [routerLink]="['/business']">Business Application</a></li>
                 </ul>
               </li>
-              <li><a [routerLink]="['/contactus']">Contact Us</a></li>
+              <li class="nav-item"><a class="nav-link" [routerLink]="['/contactus']">Contact Us</a></li>
   
-              <li>
+              <li class="nav-item">
                 <button type="button" class="btn  ml-lg-2 w3ls-btn" data-toggle="modal" aria-pressed="false" data-target="#exampleModal">
                     Login
                 </button>
