--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="limiter">
     <div class="container-login100">
         <div class="wrap-login100">
-            <form class="login100-form validate-form">
+            <form class="login100-form validate-form" (ngSubmit)="login(loginForm)" #loginForm="ngForm">
                 <span class="login100-form-title p-b-26">
                     Welcome
                 </span>
@@ -10,22 +10,25 @@
                 </span>
 
                 <div class="wrap-input100 validate-input" data-validate = "Valid email is: a@b.c">
-                    <input class="input100" type="text" name="email">
-                    <span class="focus-input100" data-placeholder="Email"></span>
+                    <input class="input100" type="text"  ngModel #un="ngModel" name="username" placeholder="Username" required>
                 </div>
+                <span class="invalid" *ngIf="un.touched && un.errors?.required"><i>Username is required</i></span>
 
                 <div class="wrap-input100 validate-input" data-validate="Enter password">
                     <span class="btn-show-pass">
                         <i class="zmdi zmdi-eye"></i>
                     </span>
-                    <input class="input100" type="password" name="pass">
-                    <span class="focus-input100" data-placeholder="Password"></span>
+                    <input class="input100" type="password"  ngModel #pw="ngModel" name="password" placeholder="Password" required>
                 </div>
+                <span class="invalid" *ngIf="pw.touched && pw.errors?.required"><i>Password is required</i></span>
 
+                <div class="invalid-login" *ngIf="isInValid">
+                    <span><i>Login invalid</i></span>
+                </div>
                 <div class="container-login100-form-btn">
                     <div class="wrap-login100-form-btn">
                         <div class="login100-form-bgbtn"></div>
-                        <button class="login100-form-btn">
+                        <button class="login100-form-btn" [disabled]="loginForm.invalid">
                             Login
                         </button>
                     </div>
@@ -33,12 +36,8 @@
 
                 <div class="text-center p-t-115">
                     <span class="txt1">
-                        Don’t have an account?
+                        Contact your admin if your have a problem with your account
                     </span>
-
-                    <a class="txt2" href="#">
-                        Sign Up
-                    </a>
                 </div>
             </form>
         </div>
