--- a/src/app/admin/assets/css/style.css
+++ b/src/app/admin/assets/css/style.css
@@ -11,3 +11,11 @@
 .admin-item-info{
     margin-right: 30px;
 }
+ul{
+    text-decoration: none;
+    list-style: none;
+}
+.admin-account-menu li{
+    margin-bottom: 10px;
+    font-size: 15px;
+}
