--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -56,7 +56,7 @@
   
               <li class="nav-item">
                   <div *ngIf="!isAuthenticated()">
-                      <button type="button" class="btn  btn-secondary" data-toggle="modal" aria-pressed="false" data-target="#exampleModal">
+                      <button type="button" class="btn btn-primary" data-toggle="modal" aria-pressed="false" data-target="#exampleModal">
                        Login
                     </button>
                   </div>
@@ -326,7 +326,7 @@
                     <form  method="post" (ngSubmit)="register(registerForm)" #registerForm="ngForm">
                         <div class="form-group">
                             <label class="col-form-label">Full Name</label>
-                            <input type="text" class="form-control" id="validationDefault01" name="fname" ngModel #fn="ngModel" required>
+                            <input type="text" class="form-control" id="validationDefault01" name="fullname" ngModel #fn="ngModel" required>
                             <span *ngIf="fn.touched && fn.errors?.required" class="invalid">Full name is required</span>
                           </div>
                         <div class="form-group">
