--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -38,6 +38,7 @@
               <li class="nav-item active"><a class="nav-link" [routerLink]="['/home']">Home</a></li>
               <li class="nav-item"><a class="nav-link" [routerLink]="['/aboutus']" class="format">About us </a></li>
               <li class="nav-item"><a  class="nav-link" [routerLink]="['/service']">Services </a></li>
+              <li class="nav-item"><a  class="nav-link" [routerLink]="['/seminar']">Seminars </a></li>
               <li class="nav-item"> <a href="#"  data-toggle="dropdown" role="button" aria-expanded="false">Blog <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" [routerLink]="['/bloglist']">Blog Listing</a></li>
@@ -72,7 +73,7 @@
         </div>
       </nav>
   </header>
-  
+
     <!--/body --> 
   <router-outlet></router-outlet>
   
